# MakeHashString

./: LICENSE  README.md  readme.txt  string.cabal
Data/Digest/Pure/SHA/: String.hs
